# extracTR

./: Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
rust/src/: kmer.rs  kmer_index.rs  lib.rs  monomer_variants.rs  probe_design.rs  tr_finder.rs
src/extractr/: __init__.py  benchmark.py  extractr.py
src/extractr/core_functions/: evaluation.py  index_tools.py  probe_design.py  sdat_tools.py  tr_finder.py
src/extractr/installers/: __init__.py  base.py  fastan.py  tanbed.py
src/extractr_rs/: __init__.py
tests/: test_evaluation.py  test_helpers.py  test_index_tools.py  test_kmer_path_finder.py  test_probe_design.py  test_sdat_tools.py  test_tr_finder.py
